--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Page Not Found
+title: Page Non Trouvée
 background: grey
 ---
 
@@ -8,9 +8,9 @@ background: grey
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">404 - Page Not Found</h2>
+        <h2 class="section-heading text-uppercase">404 - Page Non Trouvée</h2>
         <h3 class="section-subheading text-muted">
-          The requested page could not be found.
+          La page demandée n'a pas pu être trouvée.
         </h3>
       </div>
     </div>
