--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+    <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
     <title>Guiziweb - Architecture HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
