--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.webp" alt="Icon">
     </div>
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <img style="height: 100px;"class="img-fluid" src='img/logo.png'
+            <img style="height: 100px;"class="img-fluid" src='img/logo.webp'
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -83,8 +83,8 @@
     <!-- Carousel Start -->
     <div id="accueil" class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/header.jpg" alt="Header de Guiziweb">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.webp'>">
+                <img class="img-fluid" src="img/header.webp" alt="Header de Guiziweb">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -108,7 +108,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-2.png" alt="Icon">
+                            <img src="img/icons/icon-2.webp" alt="Icon">
                         </div>
                         <h3 class="mb-3">Évaluation Initiale</h3>
                         <p class="mb-0">Nous commençons par une analyse approfondie de votre projet pour identifier les points de blocage et comprendre vos objectifs.</p>
@@ -117,7 +117,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-3.png" alt="Icon">
+                            <img src="img/icons/icon-3.webp" alt="Icon">
                         </div>
                         <h3 class="mb-3">Plan d'Action Personnalisé</h3>
                         <p class="mb-0">Nous élaborons un plan détaillé pour résoudre les problèmes identifiés et améliorer les performances globales de votre site.</p>
@@ -126,7 +126,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-4.png" alt="Icon">
+                            <img src="img/icons/icon-4.webp" alt="Icon">
                         </div>
                         <h3 class="mb-3">Mise en Œuvre et Suivi</h3>
                         <p class="mb-0">Nous mettons en œuvre les solutions et assurons un suivi rigoureux pour garantir le succès de votre projet.</p>
@@ -144,8 +144,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="Produit d'une boutique de Guiziweb">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="2e produit d'une boutique de Guiziweb">
+                        <img class="img-fluid" src="img/about-2.webp" alt="Produit d'une boutique de Guiziweb">
+                        <img class="img-fluid" src="img/about-1.webp" alt="2e produit d'une boutique de Guiziweb">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -179,7 +179,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/testimonial-1.png" alt="Logo Le reflet de Jade">
+                            <img class="img-fluid" src="img/testimonial-1.webp" alt="Logo Le reflet de Jade">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="https://www.instagram.com/lerefletdejade/"><i class="fab fa-instagram"></i></a>
                             </div>
@@ -193,7 +193,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/testimonial-2.png" alt="Logo lmpetscooking">
+                            <img class="img-fluid" src="img/testimonial-2.webp" alt="Logo lmpetscooking">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="https://www.instagram.com/lmpetscooking/"><i class="fab fa-instagram"></i></a>
                             </div>
@@ -207,7 +207,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/testimonial-3.png" alt="Logo MissBullesCreations">
+                            <img class="img-fluid" src="img/testimonial-3.webp" alt="Logo MissBullesCreations">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="https://www.instagram.com/missbullescreation/"><i class="fab fa-instagram"></i></a>
                             </div>
@@ -250,7 +250,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.webp"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -267,7 +267,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-3.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-3.webp"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -284,7 +284,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.webp"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
