--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
@@ -60,9 +59,9 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <img style="height: 100px;"class="img-fluid" src='img/logo.webp'
-        </a>
+        <div class="navbar-brand ms-4 ms-lg-0">
+            <img style="height: 100px;"class="img-fluid" src='img/logo.webp'>
+        </div>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,8 +72,7 @@
                 <a href="#projects" class="nav-item nav-link">Nos Projets</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a class="btn btn-square btn-outline-body me-1" href="https://www.facebook.com/guiziweb/"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-square btn-outline-body me-0" href="https://www.instagram.com/guiziweb"><i class="fab fa-instagram"></i></a>
+
         </div>
     </nav>
     <!-- Navbar End -->
