--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
-    <title>Guiziweb - Architecture HTML Template</title>
+    <title>Guiziweb</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="Guiziweb web design, SEO, TPE, PME, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
     <meta name="description" content="Guiziweb aide les TPE et PME à améliorer leur présence en ligne avec des solutions personnalisées en développement web et SEO.">
