--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
-    <title>Guiziweb</title>
+    <title>Guiziweb - Architecture HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Guiziweb web design, SEO, TPE, PME, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
+    <meta name="keywords" content="Guiziweb création web design, SEO, TPE, PME, site internet, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
     <meta name="description" content="Guiziweb aide les TPE et PME à améliorer leur présence en ligne avec des solutions personnalisées en développement web et SEO.">
 
     <!-- Favicon -->
@@ -79,6 +79,37 @@
 
 
 
+
+    <!-- About Start -->
+    <div  id="services" class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="about-img">
+                        <img class="img-fluid" src="img/about-2.webp" alt="Produit d'une boutique de Guiziweb">
+                        <img class="img-fluid" src="img/about-1.webp" alt="2e produit d'une boutique de Guiziweb">
+                    </div>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                    <h4 class="section-title">Notre expertise</h4>
+                    <h2 class="display-5 mb-4">Nous offrons des solutions complètes pour améliorer votre présence en ligne.</h2>
+                    <p>Avec une expertise solide en développement web, Ecommerce, et gestion de projets, nous maîtrisons Shopify, WooCommerce, Wix, et le développement sur mesure en PHP et Symfony.</p>
+                    <p class="mb-4">Que ce soit pour finaliser des fonctionnalités inachevées ou gérer des intégrations complexes, nous avons les solutions pour répondre à chaque défi.</p>
+                    <div class="d-flex align-items-center mb-5">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
+                            <h2 class="display-1 mb-n2" data-toggle="counter-up">7</h2>
+                        </div>
+                        <div class="ps-4">
+                            <h3>Ans</h3>
+                            <h3>D'Experiences</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
     <!-- Facts Start -->
     <div class="container-xxl py-5">
         <div id="services" class="container pt-5">
@@ -116,35 +147,106 @@
     <!-- Facts End -->
 
 
-    <!-- About Start -->
-    <div  id="services" class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-2.webp" alt="Produit d'une boutique de Guiziweb">
-                        <img class="img-fluid" src="img/about-1.webp" alt="2e produit d'une boutique de Guiziweb">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h4 class="section-title">Notre expertise</h4>
-                    <h2 class="display-5 mb-4">Nous offrons des solutions complètes pour améliorer votre présence en ligne.</h2>
-                    <p>Avec une expertise solide en développement web, Ecommerce, et gestion de projets, nous maîtrisons Shopify, WooCommerce, Wix, et le développement sur mesure en PHP et Symfony.</p>
-                    <p class="mb-4"> Que vous soyez confronté à des bugs persistants, des fonctionnalités incomplètes ou des intégrations complexes, nous avons les solutions adaptées pour relever chaque défi.</p>
-                    <div class="d-flex align-items-center mb-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
-                            <h2 class="display-1 mb-n2" data-toggle="counter-up">7</h2>
+<div class="container-xxl py-5">
+   <div class="container">
+      <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+         <h1 class="display-5 mb-4">Notre grille tarifaire</h1>
+         <p class="mb-4">Nous offrons la possibilité de lisser votre paiement sur plusieurs mois. Ainsi, vous évitez de payer une grosse somme en une seule fois, tout en conservant la pleine propriété de votre site.</p>
+      </div>
+      <div class="tab-class text-center pricing wow fadeInUp" data-wow-delay="0.1s">
+         <div class="tab-content text-start">
+            <div id="tab-1" class="tab-pane fade show p-0 active">
+               <div class="row g-4 d-flex align-items-stretch">
+                  <div class="col-lg-6 d-flex ">
+                     <div class="bg-primary p-4 flex-fill">
+                        <h2 class="text-white mt-2">Site vitrine</h2>
+                        <div class="text-white">
+                           <h1 class="d-inline display-4 text-dark mb-0">99€</h1>
+                           <span class="align-baseline">/ Mois</span>
                         </div>
-                        <div class="ps-4">
-                            <h3>Ans</h3>
-                            <h3>D'Experiences</h3>
+                     </div>
+                     <div class="border border-primary p-4 flex-fill">
+                        <div class="d-flex justify-content-between mb-3">
+                           <span>
+                              <h5 class="display-5">Conception optimisée pour tous les écrans</h5>
+                              Un design adaptatif qui assure une expérience utilisateur fluide sur tous les types d’appareils, qu’il s’agisse de smartphones, tablettes ou ordinateurs de bureau.
+                           </span>
+                           <i class="fa fa-check text-primary pt-1"></i>
                         </div>
-                    </div>
-                </div>
+                        <div class="d-flex justify-content-between mb-3">
+                           <span>
+                              <h5 class="display-5">Optimisé selon les standards SEO</h5>
+                              Mise en œuvre des meilleures pratiques en matière de référencement pour améliorer la visibilité de votre site sur les moteurs de recherche.
+                           </span>
+                           <i class="fa fa-check text-primary pt-1"></i>
+                        </div>
+                        <div class="d-flex justify-content-between mb-3">
+                           <span>
+                              <h5 class="display-5">Fonctionnalités essentielles</h5>
+                              <ul>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Formulaire de contact :</div>
+                                    Permet à vos visiteurs de vous contacter facilement.
+                                 </li>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Présentation des services :</div>
+                                    Met en avant vos offres et prestations de manière claire et attrayante.
+                                 </li>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Blog :</div>
+                                    Offre un espace pour publier des articles, partager des actualités et engager votre audience.
+                                 </li>
+                              </ul>
+                           </span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-6 d-flex ">
+                     <div class="bg-dark p-4 flex-fill">
+                        <h2 class="text-white mt-2">Boutique en ligne</h2>
+                        <div class="text-white">
+                           <h1 class="d-inline display-4 text-primary mb-0">149€</h1>
+                           <span class="align-baseline">/ Mois</span>
+                        </div>
+                     </div>
+                     <div class="border border-dark p-4 flex-fill">
+                        <div class="d-flex justify-content-between mb-3">
+                           <span>
+                              <h5 class="display-5">Inclut toutes les fonctionnalités du site vitrine</h5>
+                              <p>Profitez des mêmes avantages qu'avec le site vitrine, plus des fonctionnalités e-commerce spécifiques.</p>
+                           </span>
+                           <i class="fa fa-check text-primary pt-1"></i>
+                        </div>
+                        <div class="d-flex justify-content-between mb-3">
+                           <span>
+                              <h5 class="display-5">Fonctionnalités e-commerce</h5>
+                              <ul>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Boutique en ligne :</div>
+                                    Permet de gérer et de vendre vos produits directement depuis votre site.
+                                 </li>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Gestion des stocks :</div>
+                                    Fonctionnalités pour suivre et gérer les inventaires de vos produits.
+                                 </li>
+                                 <li>
+                                    <div class=" fw-bold text-primary mb-1">Intégration des paiements :</div>
+                                    Solutions pour accepter les paiements en ligne de manière sécurisée.
+                                 </li>
+                              </ul>
+                           </span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-    <!-- About End -->
+         </div>
+      </div>
+   </div>
+</div>
+
+
+
 
    <!-- Team Start -->
     <div class="container-xxl py-5">
