--- a/projets.html
+++ b/projets.html
@@ -5,11 +5,10 @@
 <head>
     <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
-    <title>Projets</title>
+    <title>Guiziweb - Nos Projets : Sites Web et E-commerce pour TPE/PME</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Guiziweb web design, SEO, TPE, PME, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
-    <meta name="description" content="Guiziweb aide les TPE et PME à améliorer leur présence en ligne avec des solutions personnalisées en développement web et SEO.">
-
+    <meta name="description" content="Explorez les projets réalisés par Guiziweb. Nous avons aidé de nombreuses TPE et PME à développer leur présence en ligne avec des sites web et boutiques e-commerce performants.">
+    <meta name="keywords" content="projets, réalisation de sites web, e-commerce, TPE, PME, Guiziweb, portfolio, développement web">
             <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
