--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 <head>
     <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
-    <title>Services</title>
+    <title>Guiziweb - Solutions Web et E-commerce pour TPE/PME</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Guiziweb web design, SEO, TPE, PME, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
-    <meta name="description" content="Guiziweb aide les TPE et PME à améliorer leur présence en ligne avec des solutions personnalisées en développement web et SEO.">
-
+    <meta name="description" content="Guiziweb propose des solutions complètes de création de sites web et e-commerce pour les TPE et PME. Boostez votre présence en ligne avec nos services adaptés à vos besoins.">
+    <meta name="keywords" content="création de sites web, e-commerce, solutions web, TPE, PME, développement web, SEO, Guiziweb">
             <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
