--- a/tarifs.html
+++ b/tarifs.html
@@ -5,11 +5,10 @@
 <head>
     <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
     <meta charset="utf-8">
-    <title>Tarifs</title>
+    <title>Guiziweb - Tarifs pour la Création de Sites Web et E-commerce</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Guiziweb web design, SEO, TPE, PME, développement web, Shopify, WooCommerce, Wix, PHP, Symfony">
-    <meta name="description" content="Guiziweb aide les TPE et PME à améliorer leur présence en ligne avec des solutions personnalisées en développement web et SEO.">
-
+    <meta name="description" content="Découvrez les tarifs compétitifs de Guiziweb pour la création de sites web et solutions e-commerce. Des offres adaptées aux TPE et PME pour chaque budget.">
+    <meta name="keywords" content="tarifs, création de sites web, e-commerce, solutions web, TPE, PME, Guiziweb">
             <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
