--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-2.webp" alt="Produit d'une boutique de Guiziweb">
-                        <img class="img-fluid" src="img/about-1.webp" alt="2e produit d'une boutique de Guiziweb">
-                    </div>
+                        <img class="img-fluid" src="img/about-3.png" alt="2e produit d'une boutique de Guiziweb">
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">Notre expertise</h4>
