Test gestion d'articles

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <a href="index.html" class="nav-item nav-link active">Accueil</a>
                 <a href="tarifs.html" class="nav-item nav-link">Nos Tarifs</a>
                 <a href="projets.html" class="nav-item nav-link">Nos Projets</a>
-            </div>
+                <a href="articles" class="nav-item nav-link">Nos Articles</a>
+           </div>
         </div>
     </nav>
     <!-- About Start -->
