--- a/projets.html
+++ b/projets.html
@@ -30,7 +30,7 @@
 
         <!-- Template Stylesheet -->
         <link href="assets/css/style.css" rel="stylesheet">
-    
+
 
 
        <script type="application/ld+json">
@@ -71,7 +71,8 @@
                 <a href="index.html" class="nav-item nav-link active">Accueil</a>
                 <a href="tarifs.html" class="nav-item nav-link">Nos Tarifs</a>
                 <a href="projets.html" class="nav-item nav-link">Nos Projets</a>
-            </div>
+                <a href="articles" class="nav-item nav-link">Nos Articles</a>
+           </div>
         </div>
     </nav>
 
@@ -119,7 +120,7 @@
    </div>
 </div>
 
-    
+
   <!-- Appointment Start -->
     <div id="contact" class="container-xxl py-5">
         <div class="container">
@@ -170,8 +171,8 @@
     </div>
     <!-- Appointment End -->
 
- 
- 
+
+
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
