--- a/tarifs.html
+++ b/tarifs.html
@@ -68,8 +68,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Accueil</a>
-                <a href="tarifs.html" class="nav-item nav-link">Nos Tarifs</a>
+                <a href="index.html" class="nav-item nav-link">Accueil</a>
+                <a href="tarifs.html" class="nav-item nav-link active">Nos Tarifs</a>
                 <a href="projets.html" class="nav-item nav-link">Nos Projets</a>
                 <a href="articles" class="nav-item nav-link">Nos Articles</a>
            </div>
