Restructuration html + ga

--- a/projets.html
+++ b/projets.html
@@ -1,193 +1,55 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
-    <meta charset="utf-8">
-    <title>Guiziweb - Nos Projets : Sites Web et E-commerce pour TPE/PME</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Explorez les projets réalisés par Guiziweb. Nous avons aidé de nombreuses TPE et PME à développer leur présence en ligne avec des sites web et boutiques e-commerce performants.">
-    <meta name="keywords" content="projets, réalisation de sites web, e-commerce, TPE, PME, Guiziweb, portfolio, développement web">
-            <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Teko:wght@400;500;600&display=swap" rel="stylesheet">
-
-        <!-- Icon Font Stylesheet -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-        <!-- Libraries Stylesheet -->
-        <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
-        <link href="assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
-
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Template Stylesheet -->
-        <link href="assets/css/style.css" rel="stylesheet">
-
-
-
-       <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Organization",
-            "name": "Guiziweb",
-            "contactPoint": {
-                "@type": "ContactPoint",
-                "contactType": "Service client",
-                "email": "guiziweb@gmail.com"
-            },
-            "sameAs": [
-                "https://www.instagram.com/guiziweb"
-            ]
-        }
-    </script>
-
-</head>
-
-<body>
-
-      <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-    </div>
-    <!-- Spinner End -->
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="navbar-brand ms-4 ms-lg-0">
-            <img style="height: 100px;"class="img-fluid" src="img/logo.webp">
-        </div>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-           <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Accueil</a>
-                <a href="tarifs.html" class="nav-item nav-link">Nos Tarifs</a>
-                <a href="projets.html" class="nav-item nav-link active">Nos Projets</a>
-                <a href="articles" class="nav-item nav-link">Nos Articles</a>
-           </div>
-        </div>
-    </nav>
-
+---
+layout: default
+title: Nos Projets
+description: "Explorez les projets réalisés par Guiziweb. Nous avons accompagné de nombreuses TPE et PME dans la création de sites web et e-commerce sur-mesure."
+keywords: "projets Guiziweb, portfolio web, créations de sites web, exemples de sites e-commerce, solutions digitales TPE PME"
+author: "Guiziweb"
+---
 <!-- Project Start -->
 <div id="projects" class="container-xxl project py-5">
-<div class="container">
-   <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-      <h4 class="section-title">Nos Projets</h4>
-      <h1 class="display-5 mb-4">Découvrez nos réalisations</h1>
-   </div>
-   <div class="row project-items">
-      <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-         <a class="project-item" href="https://lerefletdejade.com">
-            <div class="position-relative">
-               <img class="img-fluid"  src="img/project-2.webp" alt="">
-               <div class="project-text p-4">
-                  <p class="text-dark fw-bold mb-2">Le reflet de Jade</p>
-                  <h3 class="mb-0">Boutique Wix</h3>
-               </div>
-            </div>
-         </a>
-      </div>
-      <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-         <a class="project-item" href="https://missbullescreation.com/">
-            <div class="position-relative">
-               <img class="img-fluid"  src="img/project-3.webp" alt="">
-               <div class="project-text p-4">
-                  <p class="text-dark fw-bold mb-2">MissBullesCreations</p>
-                  <h3 class="mb-0">Boutique Shopify</h3>
-               </div>
-            </div>
-         </a>
-      </div>
-      <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-         <a class="project-item" href="https://www.lm-pets-cooking.fr/">
-            <div class="position-relative">
-               <img class="img-fluid"  src="img/project-1.jpg" alt="">
-               <div class="project-text p-4">
-                  <p class="text-dark fw-bold mb-2">LM Pets Cooking</p>
-                  <h3 class="mb-0">Boutique WooCommerce</h3>
-               </div>
-            </div>
-         </a>
-      </div>
-   </div>
-</div>
-
-
-  <!-- Appointment Start -->
-    <div id="contact" class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title">Nous contacter</h4>
-                    <p class="mb-4">N'hésitez pas à nous contacter pour toute question ou demande d'information, nous nous ferons un plaisir de vous assister rapidement et efficacement</p>
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="d-flex">
-                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
-                                    <i class="fa fa-2x fa-envelope-open text-primary"></i>
-                                </div>
-                                <div class="ms-4">
-                                    <p class="mb-2">Ou par mail</p>
-                                    <h3 class="mb-0">guiziweb@gmail.com</h3>
-                                </div>
-                            </div>
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+            <h4 class="section-title">Nos Projets</h4>
+            <h1 class="display-5 mb-4">Découvrez nos réalisations</h1>
+        </div>
+        <div class="row project-items">
+            <!-- Project 1 -->
+            <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <a class="project-item" href="https://lerefletdejade.com">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/project-2.webp" alt="">
+                        <div class="project-text p-4">
+                            <p class="text-dark fw-bold mb-2">Le reflet de Jade</p>
+                            <h3 class="mb-0">Boutique Wix</h3>
                         </div>
                     </div>
-                </div>
-
-
-
-               <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-
-       <form
-  action="https://formspree.io/f/xvoeyjdo"
-  method="POST"
->
-    <div class="row g-3">
-        <div class="col-12 col-sm-6">
-            <input type="email" class="form-control" name="email" placeholder="Votre Email" style="height: 55px;" required>
-        </div>
-        <div class="col-12">
-            <textarea class="form-control" rows="5"  name="message" placeholder="Message"></textarea>
-        </div>
-        <div class="col-12">
-            <button class="btn btn-primary w-100 py-3" type="submit">Envoyer</button>
-        </div>
-    </div>
-    </form>
-
-</div>
-
+                </a>
+            </div>
+            <!-- Project 2 -->
+            <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                <a class="project-item" href="https://missbullescreation.com/">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/project-3.webp" alt="">
+                        <div class="project-text p-4">
+                            <p class="text-dark fw-bold mb-2">MissBullesCreations</p>
+                            <h3 class="mb-0">Boutique Shopify</h3>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- Project 3 -->
+            <div class="p-2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                <a class="project-item" href="https://www.lm-pets-cooking.fr/">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/project-1.jpg" alt="">
+                        <div class="project-text p-4">
+                            <p class="text-dark fw-bold mb-2">LM Pets Cooking</p>
+                            <h3 class="mb-0">Boutique WooCommerce</h3>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
-
-
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/lib/wow/wow.min.js"></script>
-    <script src="assets/lib/easing/easing.min.js"></script>
-    <script src="assets/lib/waypoints/waypoints.min.js"></script>
-    <script src="assets/lib/counterup/counterup.min.js"></script>
-    <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="assets/js/main.js"></script>
-</body>
-
-</html>
-
+</div>
+<!-- Project End -->
