--- a/articles.html
+++ b/articles.html
@@ -1,7 +1,51 @@
 ---
-layout: blog
+layout: default
 title: "Nos Articles"
 description: "Découvrez nos articles sur les meilleures pratiques web, e-commerce et plus encore."
 keywords: "articles, blog, projets web, e-commerce"
-permalink: /articles/
+author: "Guiziweb"
 ---
+<div id="title-blog" class="container-xxl project py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <h4 class="section-title">Nos Articles</h4>
+            <h1 class="display-5 mb-4">{{ page.title }}</h1>
+        </div>
+    </div>
+</div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-12">
+                <div class="row g-5">
+                    {% for post in site.posts %}
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="blog-item">
+                            <div class="overflow-hidden">
+                                <!-- Image du post -->
+                                {% if post.image  %}
+                                <img class="img-fluid w-100"
+                                     src="{{ post.image }}"
+                                     alt="{{ post.title }}"
+                                >
+                                {% endif %}
+                            </div>
+                            <div class="bg-light p-4">
+                                <div class="breadcrumb blog-meta">
+                                    <!-- Métadonnées du post -->
+                                    <div class="breadcrumb-item"><a href="#">{{ post.date | date: "%d %B, %Y" }}</a></div>
+                                    <div class="breadcrumb-item"><a href="#">{{ post.author }}</a></div>
+                                </div>
+                                <!-- Titre et contenu du post -->
+                                <a href="{{ post.url }}" class="d-block h3 mb-3">{{ post.title }}</a>
+                                <p class="mb-4">{{ post.excerpt | strip_html | truncatewords: 30 }}</p>
+                                <a href="{{ post.url }}" class="btn btn-outline-body px-3">Lire Plus</a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
