--- a/tarifs.html
+++ b/tarifs.html
@@ -1,245 +1,111 @@
+---
+layout: default
+title: Nos Tarifs
+description: "Découvrez les tarifs de Guiziweb pour la création de sites web et e-commerce. Des solutions adaptées aux budgets des TPE et PME."
+keywords: "tarifs création de site web, prix e-commerce, solutions web abordables, TPE, PME, Guiziweb"
+author: "Guiziweb"
+---
 
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta name="google-site-verification" content="uz4tmkdksHM2R_n1E-Rm3IiFbqPDtwpy4OaChcTmJcQ" />
-    <meta charset="utf-8">
-    <title>Guiziweb - Tarifs pour la Création de Sites Web et E-commerce</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Découvrez les tarifs compétitifs de Guiziweb pour la création de sites web et solutions e-commerce. Des offres adaptées aux TPE et PME pour chaque budget.">
-    <meta name="keywords" content="tarifs, création de sites web, e-commerce, solutions web, TPE, PME, Guiziweb">
-            <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Teko:wght@400;500;600&display=swap" rel="stylesheet">
-
-        <!-- Icon Font Stylesheet -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-        <!-- Libraries Stylesheet -->
-        <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
-        <link href="assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
-
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Template Stylesheet -->
-        <link href="assets/css/style.css" rel="stylesheet">
-    
-
-
-       <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Organization",
-            "name": "Guiziweb",
-            "contactPoint": {
-                "@type": "ContactPoint",
-                "contactType": "Service client",
-                "email": "guiziweb@gmail.com"
-            },
-            "sameAs": [
-                "https://www.instagram.com/guiziweb"
-            ]
-        }
-    </script>
-
-</head>
-
-<body>
-
-      <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-    </div>
-    <!-- Spinner End -->
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="navbar-brand ms-4 ms-lg-0">
-            <img style="height: 100px;"class="img-fluid" src="img/logo.webp">
-        </div>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-           <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Accueil</a>
-                <a href="tarifs.html" class="nav-item nav-link active">Nos Tarifs</a>
-                <a href="projets.html" class="nav-item nav-link">Nos Projets</a>
-                <a href="articles" class="nav-item nav-link">Nos Articles</a>
-           </div>
-        </div>
-    </nav>
+<!-- Pricing Section Start -->
 <div class="container-xxl py-5">
-   <div class="container">
-      <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-         <h1 class="display-5 mb-4">Notre grille tarifaire</h1>
-         <p class="mb-4">Nous offrons la possibilité de lisser votre paiement sur plusieurs mois. Ainsi, vous évitez de payer une grosse somme en une seule fois, tout en conservant la pleine propriété de votre site.</p>
-      </div>
-      <div class="tab-class text-center pricing wow fadeInUp" data-wow-delay="0.1s">
-         <div class="tab-content text-start">
-            <div id="tab-1" class="tab-pane fade show p-0 active">
-               <div class="row g-4 d-flex align-items-stretch">
-                  <div class="col-lg-6 d-flex ">
-                     <div class="bg-primary p-4 flex-fill">
-                        <h2 class="text-white mt-2">Site vitrine</h2>
-                        <div class="text-white">
-                           <h1 class="d-inline display-4 text-dark mb-0">99€</h1>
-                           <span class="align-baseline">/ Mois</span>
-                        </div>
-                     </div>
-                     <div class="border border-primary p-4 flex-fill">
-                        <div class="d-flex justify-content-between mb-3">
-                           <span>
-                              <h5 class="display-5">Conception optimisée pour tous les écrans</h5>
-                              Un design adaptatif qui assure une expérience utilisateur fluide sur tous les types d’appareils, qu’il s’agisse de smartphones, tablettes ou ordinateurs de bureau.
-                           </span>
-                           <i class="fa fa-check text-primary pt-1"></i>
-                        </div>
-                        <div class="d-flex justify-content-between mb-3">
-                           <span>
-                              <h5 class="display-5">Optimisé selon les standards SEO</h5>
-                              Mise en œuvre des meilleures pratiques en matière de référencement pour améliorer la visibilité de votre site sur les moteurs de recherche.
-                           </span>
-                           <i class="fa fa-check text-primary pt-1"></i>
-                        </div>
-                        <div class="d-flex justify-content-between mb-3">
-                           <span>
-                              <h5 class="display-5">Fonctionnalités essentielles</h5>
-                              <ul>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Formulaire de contact :</div>
-                                    Permet à vos visiteurs de vous contacter facilement.
-                                 </li>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Présentation des services :</div>
-                                    Met en avant vos offres et prestations de manière claire et attrayante.
-                                 </li>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Blog :</div>
-                                    Offre un espace pour publier des articles, partager des actualités et engager votre audience.
-                                 </li>
-                              </ul>
-                           </span>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-lg-6 d-flex ">
-                     <div class="bg-dark p-4 flex-fill">
-                        <h2 class="text-white mt-2">Boutique en ligne</h2>
-                        <div class="text-white">
-                           <h1 class="d-inline display-4 text-primary mb-0">149€</h1>
-                           <span class="align-baseline">/ Mois</span>
-                        </div>
-                     </div>
-                     <div class="border border-dark p-4 flex-fill">
-                        <div class="d-flex justify-content-between mb-3">
-                           <span>
-                              <h5 class="display-5">Inclut toutes les fonctionnalités du site vitrine</h5>
-                              <p>Profitez des mêmes avantages qu'avec le site vitrine, plus des fonctionnalités e-commerce spécifiques.</p>
-                           </span>
-                           <i class="fa fa-check text-primary pt-1"></i>
-                        </div>
-                        <div class="d-flex justify-content-between mb-3">
-                           <span>
-                              <h5 class="display-5">Fonctionnalités e-commerce</h5>
-                              <ul>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Boutique en ligne :</div>
-                                    Permet de gérer et de vendre vos produits directement depuis votre site.
-                                 </li>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Gestion des stocks :</div>
-                                    Fonctionnalités pour suivre et gérer les inventaires de vos produits.
-                                 </li>
-                                 <li>
-                                    <div class=" fw-bold text-primary mb-1">Intégration des paiements :</div>
-                                    Solutions pour accepter les paiements en ligne de manière sécurisée.
-                                 </li>
-                              </ul>
-                           </span>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-
-    
-  <!-- Appointment Start -->
-    <div id="contact" class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title">Nous contacter</h4>
-                    <p class="mb-4">N'hésitez pas à nous contacter pour toute question ou demande d'information, nous nous ferons un plaisir de vous assister rapidement et efficacement</p>
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="d-flex">
-                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
-                                    <i class="fa fa-2x fa-envelope-open text-primary"></i>
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <h1 class="display-5 mb-4">Notre grille tarifaire</h1>
+            <p class="mb-4">
+                Nous offrons la possibilité de lisser votre paiement sur plusieurs mois. Ainsi, vous évitez de payer une grosse somme en une seule fois, tout en conservant la pleine propriété de votre site.
+            </p>
+        </div>
+        <div class="tab-class text-center pricing wow fadeInUp" data-wow-delay="0.1s">
+            <div class="tab-content text-start">
+                <div id="tab-1" class="tab-pane fade show p-0 active">
+                    <div class="row g-4 d-flex align-items-stretch">
+                        <!-- Site Vitrine -->
+                        <div class="col-lg-6 d-flex">
+                            <div class="bg-primary p-4 flex-fill">
+                                <h2 class="text-white mt-2">Site vitrine</h2>
+                                <div class="text-white">
+                                    <h1 class="d-inline display-4 text-dark mb-0">99€</h1>
+                                    <span class="align-baseline">/ Mois</span>
                                 </div>
-                                <div class="ms-4">
-                                    <p class="mb-2">Ou par mail</p>
-                                    <h3 class="mb-0">guiziweb@gmail.com</h3>
+                            </div>
+                            <div class="border border-primary p-4 flex-fill">
+                                <div class="d-flex justify-content-between mb-3">
+                                    <span>
+                                        <h5 class="display-5">Conception optimisée pour tous les écrans</h5>
+                                        Un design adaptatif qui assure une expérience utilisateur fluide sur tous les types d’appareils, qu’il s’agisse de smartphones, tablettes ou ordinateurs de bureau.
+                                    </span>
+                                    <i class="fa fa-check text-primary pt-1"></i>
+                                </div>
+                                <div class="d-flex justify-content-between mb-3">
+                                    <span>
+                                        <h5 class="display-5">Optimisé selon les standards SEO</h5>
+                                        Mise en œuvre des meilleures pratiques en matière de référencement pour améliorer la visibilité de votre site sur les moteurs de recherche.
+                                    </span>
+                                    <i class="fa fa-check text-primary pt-1"></i>
+                                </div>
+                                <div class="d-flex justify-content-between mb-3">
+                                    <span>
+                                        <h5 class="display-5">Fonctionnalités essentielles</h5>
+                                        <ul>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Formulaire de contact :</div>
+                                                Permet à vos visiteurs de vous contacter facilement.
+                                            </li>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Présentation des services :</div>
+                                                Met en avant vos offres et prestations de manière claire et attrayante.
+                                            </li>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Blog :</div>
+                                                Offre un espace pour publier des articles, partager des actualités et engager votre audience.
+                                            </li>
+                                        </ul>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Boutique en ligne -->
+                        <div class="col-lg-6 d-flex">
+                            <div class="bg-dark p-4 flex-fill">
+                                <h2 class="text-white mt-2">Boutique en ligne</h2>
+                                <div class="text-white">
+                                    <h1 class="d-inline display-4 text-primary mb-0">149€</h1>
+                                    <span class="align-baseline">/ Mois</span>
+                                </div>
+                            </div>
+                            <div class="border border-dark p-4 flex-fill">
+                                <div class="d-flex justify-content-between mb-3">
+                                    <span>
+                                        <h5 class="display-5">Inclut toutes les fonctionnalités du site vitrine</h5>
+                                        <p>Profitez des mêmes avantages qu'avec le site vitrine, plus des fonctionnalités e-commerce spécifiques.</p>
+                                    </span>
+                                    <i class="fa fa-check text-primary pt-1"></i>
+                                </div>
+                                <div class="d-flex justify-content-between mb-3">
+                                    <span>
+                                        <h5 class="display-5">Fonctionnalités e-commerce</h5>
+                                        <ul>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Boutique en ligne :</div>
+                                                Permet de gérer et de vendre vos produits directement depuis votre site.
+                                            </li>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Gestion des stocks :</div>
+                                                Fonctionnalités pour suivre et gérer les inventaires de vos produits.
+                                            </li>
+                                            <li>
+                                                <div class="fw-bold text-primary mb-1">Intégration des paiements :</div>
+                                                Solutions pour accepter les paiements en ligne de manière sécurisée.
+                                            </li>
+                                        </ul>
+                                    </span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-
-               <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-
-       <form
-  action="https://formspree.io/f/xvoeyjdo"
-  method="POST"
->
-    <div class="row g-3">
-        <div class="col-12 col-sm-6">
-            <input type="email" class="form-control" name="email" placeholder="Votre Email" style="height: 55px;" required>
-        </div>
-        <div class="col-12">
-            <textarea class="form-control" rows="5"  name="message" placeholder="Message"></textarea>
-        </div>
-        <div class="col-12">
-            <button class="btn btn-primary w-100 py-3" type="submit">Envoyer</button>
-        </div>
-    </div>
-    </form>
-
-</div>
-
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
-
- 
- 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/lib/wow/wow.min.js"></script>
-    <script src="assets/lib/easing/easing.min.js"></script>
-    <script src="assets/lib/waypoints/waypoints.min.js"></script>
-    <script src="assets/lib/counterup/counterup.min.js"></script>
-    <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="assets/js/main.js"></script>
-</body>
-</html>
-
+</div>
+<!-- Pricing Section End -->
