Feature: Migrate to pure Tailwind CDN (#26) (#27)
* test: Trigger new build with improved workflow

* test: Trigger W3C validation on broken HTML

* test: Final workflow test with updated W3C validation

* feat: Remove tailwind.config.js and migrate to pure CDN classes

- Replace text-primary-600 with text-blue-600 + gradient
- Replace text-secondary-700 with text-slate-700
- Replace hover:text-primary-600 with hover:text-blue-600
- Replace focus-primary with focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
- Delete tailwind.config.js (428 lines removed)
- Maintain visual design with CDN-compatible classes

Resolves #26 - Full migration to Tailwind CDN according to agency standards

* fix: Restore valid HTML5 structure

- Add missing DOCTYPE declaration
- Fix unclosed html tag (missing >)
- Remove test comment
- W3C validation now passes

---------

Co-authored-by: camilleislasse <camille.islasse@acseo-conseil.fr>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- BROKEN HTML FOR TESTING -->
-<html lang="fr"
+<!DOCTYPE html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,7 @@
             <div class="flex justify-between items-center py-3 sm:py-4">
                 <!-- Logo - Optimized for mobile -->
                 <div class="flex-shrink-0">
-                    <h1 class="text-xl sm:text-2xl font-bold text-primary-600 gradient-text">
+                    <h1 class="text-xl sm:text-2xl font-bold text-blue-600 bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent">
                         <i class="fas fa-brain mr-1 sm:mr-2 animate-float text-lg sm:text-xl"></i>
                         <span class="hidden xs:inline">Alex Dubois</span>
                         <span class="xs:hidden">A.D</span>
@@ -63,11 +63,11 @@
                 <!-- Desktop Menu -->
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-6 lg:space-x-8">
-                        <a href="#hero" class="nav-link text-secondary-700 hover:text-primary-600 transition-all duration-300 focus-primary text-sm lg:text-base">Accueil</a>
-                        <a href="#services" class="nav-link text-secondary-700 hover:text-primary-600 transition-all duration-300 focus-primary text-sm lg:text-base">Services</a>
-                        <a href="#benefits" class="nav-link text-secondary-700 hover:text-primary-600 transition-all duration-300 focus-primary text-sm lg:text-base">Avantages</a>
-                        <a href="#testimonials" class="nav-link text-secondary-700 hover:text-primary-600 transition-all duration-300 focus-primary text-sm lg:text-base">Témoignages</a>
-                        <a href="#contact" class="nav-link text-secondary-700 hover:text-primary-600 transition-all duration-300 focus-primary text-sm lg:text-base">Contact</a>
+                        <a href="#hero" class="nav-link text-slate-700 hover:text-blue-600 transition-all duration-300 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm lg:text-base">Accueil</a>
+                        <a href="#services" class="nav-link text-slate-700 hover:text-blue-600 transition-all duration-300 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm lg:text-base">Services</a>
+                        <a href="#benefits" class="nav-link text-slate-700 hover:text-blue-600 transition-all duration-300 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm lg:text-base">Avantages</a>
+                        <a href="#testimonials" class="nav-link text-slate-700 hover:text-blue-600 transition-all duration-300 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm lg:text-base">Témoignages</a>
+                        <a href="#contact" class="nav-link text-slate-700 hover:text-blue-600 transition-all duration-300 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm lg:text-base">Contact</a>
                     </div>
                 </div>
                 
